# Roboto_ai_Intern

./: .gitattributes  CMakeLists.txt  package.xml
action/: MoveToGoal.action
config/: ekf.yaml  mapper_params_offline.yaml  mapper_params_online_async.yaml  mapper_params_online_multi_async.yaml  mapper_params_online_sync.yaml  nav2.yaml
launch/: nav2_sim.launch.py  offline_mapping_launch.py  online_multi.launch.py  slam_mapping_launch.py  slam_online_sync.launch.py  spawn_robot.launch.py  world_launch.py
log/: latest_list
maps/: map_1764670346.pgm  map_1764670346.yaml
maps/offline/: map_1764756606.pgm  map_1764756606.yaml
maps/online_multi/: map_1764742272.pgm  map_1764742272.yaml
maps/online_sync/: map_1764737849.pgm  map_1764737849.yaml
meshes/: base_link.STL  camera.STL  f_castor.STL  l_motor.STL  l_wheel.STL  r_castor.STL  r_motor.STL  r_wheel.STL
offline_map_data/: metadata.yaml  offline_map_data_0.db3
rviz/: one.rviz
scripts/: move_to_goal_client.py  move_to_goal_server.py
urdf/: dyno_atman.urdf.xacro
worlds/: sample.sdf
